Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,7 +66,7 @@ publish-docker:
 #uncomment this once the $RSA $VM_USER@$VM are set in the repo - Setting -> CI/CD -> variables
 #$RSA should be a private key file, $VM_USER is the VM user name (e.g. root or ec2) and $VM is the IP address of the Virtual Machine
 #this assumes docker and SSH is installed on the $VM
-#deploy-git:
+deploy-git:
   image: alpine:latest
   stage: deploy
   when: on_success
