--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -21,7 +21,7 @@
     "enableHibernateCache": true,
     "enableSwaggerCodegen": false,
     "enableTranslation": true,
-    "entities": ["Expenses", "Expense", "Income"],
+    "entities": ["Expenses", "Income"],
     "entitySuffix": "",
     "jhiPrefix": "jhi",
     "jhipsterVersion": "7.9.3",
