--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "@ngx-translate/http-loader": "7.0.0",
     "@popperjs/core": "2.11.6",
     "bootstrap": "5.2.0",
+    "darkmode-js": "^1.5.7",
     "dayjs": "1.11.5",
     "ngx-infinite-scroll": "14.0.0",
     "ngx-webstorage": "10.0.1",
