Settings feature change theme

--- a/package.json
+++ b/package.json
@@ -102,7 +102,7 @@
     "@popperjs/core": "2.11.6",
     "bootstrap": "5.2.0",
     "chart.js": "^4.2.1",
-    "darkmode-js": "^1.5.7",
+    "darkreader": "^4.9.58",
     "dayjs": "1.11.5",
     "ngx-infinite-scroll": "14.0.0",
     "ngx-webstorage": "10.0.1",
