Settings export data

--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "chart.js": "^4.2.1",
     "darkreader": "^4.9.58",
     "dayjs": "1.11.5",
+    "file-saver": "^2.0.5",
     "ngx-infinite-scroll": "14.0.0",
     "ngx-webstorage": "10.0.1",
     "rxjs": "7.5.6",
@@ -120,8 +121,10 @@
     "@angular/cli": "14.2.1",
     "@angular/compiler-cli": "14.2.0",
     "@angular/service-worker": "14.2.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jest": "28.1.8",
     "@types/node": "16.11.56",
+    "@types/nodemailer": "^6.4.7",
     "@typescript-eslint/eslint-plugin": "5.36.1",
     "@typescript-eslint/parser": "5.36.1",
     "browser-sync": "2.27.10",
